<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Locator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="month_prompt">Month</string>
    <string name="date_prompt">Date</string>
    <string name="hour_prompt">Hour</string>
    <string name="min_prompt">Minute</string>
    <string name="category_prompt">Category</string>
    <string name="chk_manhattan">Manhattan</string>
    <string name="chk_brooklyn">Brooklyn</string>
    <string name="chk_queens">Queens</string>
    <string name="chk_bronx">Bronx</string>
    
    <string-array name="spinner_month">
        <item>   </item>
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>       
    </string-array>
    <string-array name="spinner_date">
        <item>  </item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item> 
        <item>12</item> 
        <item>13</item> 
        <item>14</item> 
        <item>15</item> 
        <item>16</item> 
        <item>17</item> 
        <item>18</item> 
        <item>19</item> 
        <item>20</item> 
        <item>21</item> 
        <item>22</item> 
        <item>23</item> 
        <item>24</item> 
        <item>25</item> 
        <item>26</item> 
        <item>27</item> 
        <item>28</item> 
        <item>29</item> 
        <item>30</item> 
        <item>31</item>               
    </string-array>
    <string-array name="spinner_hour">
        <item>  </item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>   
    </string-array> 

    <string-array name="spinner_min">
        <item>  </item>
        <item>00</item>
        <item>30</item> 
    </string-array>        
    <string-array name="spinner_category">
        <item>     </item>
        <item>Music</item>
        <item>Art</item> 
        <item>Parade</item> 
        <item>Festival</item> 
        <item>Family Event</item> 
    </string-array>  

</resources>