<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fcfcfc"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/title_bar"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Search Events"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="409dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/textView_detail_region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:text="Event name:"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ff000000"
                
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText_search_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text" >

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:text="Start Time:"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ff000000"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="99dp"
                android:gravity="center|fill_vertical"
                android:orientation="vertical" >

                <Spinner
                    android:id="@+id/spinner_month"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:prompt="@string/month_prompt"
                    android:entries="@array/spinner_month"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/spinner_hour"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:prompt="@string/hour_prompt"
                    android:entries="@array/spinner_hour"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.85"
                android:gravity="center|fill_vertical"
                android:orientation="vertical" >

                <Spinner
                    android:id="@+id/spinner_date"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:prompt="@string/date_prompt"
                    android:entries="@array/spinner_date"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/spinner_min"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:prompt="@string/min_prompt"
                    android:entries="@array/spinner_min"                    
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="Category:"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ff000000"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical"
                android:entries="@array/spinner_category"
                android:prompt="@string/category_prompt" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:text="Location:"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ff000000" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="145dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <CheckBox
                    android:id="@+id/chk_manhattan"
                    android:layout_width="205dp"
                    android:layout_height="34dp"
                    android:text="@string/chk_manhattan"
                    android:textColor="#ff000000"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/chk_brooklyn"
                    android:layout_width="205dp"
                    android:layout_height="34dp"
                    android:text="@string/chk_brooklyn"
                    android:textColor="#ff000000"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/chk_queens"
                    android:layout_width="205dp"
                    android:layout_height="34dp"
                    android:text="@string/chk_queens"
                    android:textColor="#ff000000"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/chk_bronx"
                    android:layout_width="205dp"
                    android:layout_height="34dp"
                    android:text="@string/chk_bronx"
                    android:textColor="#ff000000"
                    android:textSize="20sp" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button_search"
            style="@drawable/category_button"
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:background="@drawable/category_button"
            android:text="Search Event!" />

    </LinearLayout>

</LinearLayout>